Remove local jquery

--- a/site/examples/app.html
+++ b/site/examples/app.html
@@ -196,7 +196,7 @@
         </article>
     </div>
 
-    <script src="components/jquery/jquery.js"></script>
+    <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
     <script src="../package/tuktuk.js"></script>
     <script>
         // TukTuk.Modal.show("modal");
