--- a/site/examples/profile.html
+++ b/site/examples/profile.html
@@ -124,7 +124,7 @@
         </div>
     </footer>
 
-    <script src="components/jquery/jquery.js"></script>
+    <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
     <script src="../package/tuktuk.js"></script>
 </body>
 </html>
