--- a/site/index.html
+++ b/site/index.html
@@ -111,7 +111,7 @@
         <div class="row text book margin-bottom">
             <div class="column_10 offset_1">
                 <h1 class="color theme">Examples</h1>
-                <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At, quas, esse!</h3>
+                <h3>As a picture is worth a thousand words <span class="text italic">(or hundreds of lines of code)</span>, check out four examples of what you can do with <strong>tuk</strong>tuk:</h3>
             </div>
         </div>
 
@@ -298,7 +298,7 @@
 
             <div class="column_4">
                 <h1 class="color theme text book center">Tables</h1>
-                <h3 class="text book center">TukTuk comes with clean styling for table elements like TH, odds...</h3>
+                <h3 class="text book center">Clean & Flat style for table elements such as TH, TD, odds...</h3>
                 <table class="margin-top">
                     <thead>
                         <tr>
@@ -573,7 +573,7 @@
         <div class="row">
             <div class="column_10 offset_1 text center book">
                 <h1 class="color theme">Modals</h1>
-                <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h3>
+                <h3>Need popups for interact with the user, tuktuk puts you very easy.</h3>
              </div>
         </div>
         <div class="row margin-top margin-bottom text center">
@@ -588,7 +588,7 @@
         <div class="row text book">
             <div class="column_10 offset_1 text center margin-bottom">
                 <h1 class="color theme">tuktuk.<strong>icons</strong>.css</h1>
-                <h3>If all of the above isn't enough, take a look at how you can easily extend TukTuk's functionality in your projects.</h3>
+                <h3>Seize the <span class="text normal">@font-face</span> feature to have a large repository of vectorized icons ready to use on your site or application.</h3>
              </div>
         </div>
 
@@ -915,7 +915,7 @@
     </div>
 
     <!-- TUKTUK.WIDGETS -->
-    <script src="http://code.jquery.com/jquery-1.8.3.min.js"></script>
+    <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
     <script src="package/tuktuk.js"></script>
 </body>
 </html>
