--- a/site/examples/blog.html
+++ b/site/examples/blog.html
@@ -8,18 +8,22 @@
     <link rel="stylesheet" href="../package/tuktuk.theme.css">
     <link rel="stylesheet" href="../package/tuktuk.icons.css">
     <style>
-      body > footer img {
-          height: 18px;
-          position: relative;
-          top: 5px;
-          left: 2px; }
+        body > header .logo {
+            margin-top: 8px;
+            margin-right: 8px;
+            max-height: 28px; }
+
+        body > footer img {
+            height: 18px;
+            position: relative;
+            top: 5px;
+            left: 2px; }
 
         div.img.avatar {
             height: 46px;
             width: 46px;
             float: left;
-            margin: 1%;
-        }
+            margin: 1%; }
     </style>
 </head>
 
@@ -27,7 +31,8 @@
     <header class="bck light padding">
         <div class="row">
             <div class="column_6">
-                <h2 class="text color bold">tuk<span class="text thin">tuk</span> <span class="text italic thin small">Blog Template</span></h2>
+                <img src="../images/logo-color.png" class="logo on-left"/>
+                <h2 class="text italic thin">Blog Template</h2>
             </div>
             <nav class="column_6  text right bold">
                 <a href="#">Login</a>
