--- a/site/examples/landing.html
+++ b/site/examples/landing.html
@@ -10,11 +10,16 @@
     <!-- TUKTUK.WIDGETS -->
     <link rel="stylesheet" href="../package/tuktuk.icons.css">
     <style>
+        body > header .logo {
+            margin-top: 8px;
+            margin-right: 8px;
+            max-height: 28px; }
+
         body > footer img {
-          height: 18px;
-          position: relative;
-          top: 5px;
-          left: 2px; }
+            height: 18px;
+            position: relative;
+            top: 5px;
+            left: 2px; }
 
         section.landing input {
             border-radius: 4px 0px 0px 4px !important;}
@@ -28,7 +33,8 @@
     <header class="bck margin-top margin-bottom">
         <div class="row">
             <div class="column_6">
-                <h2 class="text color bold">tuk<span class="text thin">tuk</span> <span class="text italic thin small">Landing Template</span></h2>
+                <img src="../images/logo-color.png" class="logo on-left"/>
+                <h2 class="text italic thin">Landing Template</h2>
             </div>
             <nav class="column_6 text right">
                 <a href="#" class="button secondary"><span class="icon user"></span>Login</a>
