--- a/site/examples/profile.html
+++ b/site/examples/profile.html
@@ -10,11 +10,16 @@
     <!-- TUKTUK.WIDGETS -->
     <link rel="stylesheet" href="../package/tuktuk.icons.css">
     <style>
+        body > header .logo {
+            margin-top: 8px;
+            margin-right: 8px;
+            max-height: 28px; }
+
         body > footer img {
-          height: 18px;
-          position: relative;
-          top: 5px;
-          left: 2px; }
+            height: 18px;
+            position: relative;
+            top: 5px;
+            left: 2px; }
     </style>
 </head>
 <body class="text thin">
@@ -22,7 +27,8 @@
     <header class="bck dark padding color white">
         <div class="row">
             <div class="column_6">
-                <h2 class="text color bold">tuk<span class="text thin">tuk</span> <span class="text italic thin small">Profile Template</span></h2>
+                <img src="../images/logo-white.png" class="logo on-left"/>
+                <h2 class="text italic thin">Profile Template</h2>
             </div>
             <nav class="column_6  text right bold">
                 <a href="#">Login</a>
