--- a/site/index.html
+++ b/site/index.html
@@ -11,6 +11,10 @@
     <!-- TUKTUK.WIDGETS -->
     <link rel="stylesheet" href="package/tuktuk.icons.css">
     <style>
+          body > header .logo {
+              margin-top: 11px;
+              max-height: 28px; }
+
           body > header .tapquo > img {
               max-height: 48px; }
 
@@ -38,7 +42,7 @@
     <header class="padding-top">
         <div class="row">
             <div class="column_4">
-                <h2 class="text color theme"><span class="text bold">tuk</span>tuk</h2>
+                <img src="images/logo-green.png" class="logo"/>
             </div>
             <div class="column_4 text center hide-phone">
                 <a href="http://tapquo.com" class="tapquo"><img src="http://cdn.tapquo.com/images/tapquo_circle.png"></a>
@@ -91,8 +95,9 @@
     <section class="padding bck dark">
         <div class="row text center book margin-bottom">
             <div class="column_10 offset_1">
-                <h1 class="color theme">Downloads</h1>
-                <h3>Sounds cool? Checkout v0.7</h3>
+                <h1 class="color theme">Download</h1>
+                <h3>Sounds cool? Checkout <span class="text normal color white">0.7 version</span>
+                </h3>
             </div>
         </div>
 
