--- a/site/examples/app.html
+++ b/site/examples/app.html
@@ -10,6 +10,10 @@
     <!-- TUKTUK.WIDGETS -->
     <link rel="stylesheet" href="../package/tuktuk.icons.css">
     <style>
+        aside > header .logo {
+            margin-top: 10px;
+            max-height: 28px; }
+
         aside footer img {
           height: 16px;
           position: relative;
@@ -73,7 +77,7 @@
 
     <aside class="bck dark column_3">
         <header class="text center bck color">
-            <h3 class="text bold on-left">tuk<span class="text thin">tuk</span> <span class="text italic thin">App</span></h3>
+            <img src="../images/logo-white.png" class="logo on-left"/>
             <a href="#" class="on-right text big icon cog" data-tuktuk-box="menu"></a>
         </header>
         <article class="scroll">
