.landing form subscribe

--- a/site/examples/landing.html
+++ b/site/examples/landing.html
@@ -22,10 +22,12 @@
             left: 2px; }
 
         section.landing input {
-            border-radius: 4px 0px 0px 4px !important;}
+            border-radius: 5px 0px 0px 5px !important;
+
+        }
 
         section.landing button {
-            border-radius: 0px 4px 4px 0px !important;}
+            border-radius: 0px 5px 5px 0px !important;}
     </style>
 </head>
 <body class="text thin">
@@ -51,9 +53,9 @@
             </div>
         </div>
         <div class="row">
-            <div class="column_6 offset_3 form">
-                <input type="email" id="mail" class="large on-left" placeholder="Your email address">
-                <button class="button large on-right"><span class="icon envelope"></span>Send</button>
+            <div class="column_6 offset_3 form subscribe">
+                <input type="email" id="mail" class="large" placeholder="Your email address">
+                <button class="button large icon envelope"></button>
             </div>
         </div>
         <h5 class="text book">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h5>
