--- a/site/examples/app.html
+++ b/site/examples/app.html
@@ -191,12 +191,29 @@
             <h4 class="inline text book">Side window.</h4>
             <button data-modal="close" class="transparent small on-right inline icon remove"></button>
         </header>
-        <article>
+        <article class="form">
+            <label>example of input</label>
+            <input type="text" value="text" />
+            <input type="text" class="large" value="text" />
+
+            <label>Example of textarea</label>
+            <textarea>textarea</textarea>
+            <textarea class="large">textarea</textarea>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt quos dolorum minus fugiat rem similique velit aperiam est sequi neque nulla tenetur minima autem facilis temporibus quaerat consectetur impedit praesentium.
         </article>
+        <footer>
+            <button data-modal="close">Save</button>
+        </footer>
     </div>
 
     <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
     <script src="../package/tuktuk.js"></script>
+    <script>
+        // TukTuk.Modal.show("modal");
+        // TukTuk.Modal.show("modal-right");
+        // setTimeout(function() {
+        //     TukTuk.Modal.loading();
+        // }, 1000);
+    </script>
 </body>
 </html>
