--- a/site/examples/profile.html
+++ b/site/examples/profile.html
@@ -77,8 +77,8 @@
 
 
     <section class="margin-bottom">
-        <div class="row">
-            <div class="column_12 margin-top margin-bottom">
+        <div class="row padding-top padding-bottom">
+            <div class="column_12">
                 <h2 class="text bold inline">Thumbs</h2>
                 <nav class="inline on-right">
                     <a href="#" class="button secondary small "><span class="icon search"></span>Search</a>
