--- a/site/index.html
+++ b/site/index.html
@@ -271,7 +271,7 @@
             </div>
 
             <div class="column_4">
-                <div class="row text book center">
+                <div class="text book center">
                     <h1 class="color theme">Buttons</h1>
                     <h3>Gallery of styles and sizes that will be enough to interact with your site.</h3>
                     <div class="margin-top">
