--- a/site/examples/app.html
+++ b/site/examples/app.html
@@ -210,10 +210,10 @@
     <script src="../package/tuktuk.js"></script>
     <script>
         // TukTuk.Modal.show("modal");
-        // TukTuk.Modal.show("modal-right");
-        // setTimeout(function() {
-        //     TukTuk.Modal.loading();
-        // }, 1000);
+        TukTuk.Modal.show("modal-right");
+        setTimeout(function() {
+            TukTuk.Modal.loading();
+        }, 1000);
     </script>
 </body>
 </html>
