--- a/site/index.html
+++ b/site/index.html
@@ -47,11 +47,11 @@
             <div class="column_4 text center hide-phone">
                 <a href="http://tapquo.com" class="tapquo"><img src="http://cdn.tapquo.com/images/tapquo_circle.png"></a>
             </div>
-            <nav class="column_4 text right hide-phone large">
-                <a href="https://github.com/soyjavi/package-tuktuk/archive/0.7.2.zip" class="icon download"></a>&nbsp;
-                <a href="https://github.com/soyjavi/tuktuk" class="icon github"></a>&nbsp;
+            <h5 class="column_4 text right hide-phone">
+                <a href="https://github.com/soyjavi/package-tuktuk/archive/0.7.3.zip" class="icon download margin-right"></a>
+                <a href="https://github.com/soyjavi/tuktuk" class="icon github margin-right"></a>
                 <a href="https://twitter.com/soyjavi" target="_blank" class="icon twitter"></a>
-            </nav>
+            </h5>
         </div>
     </header>
 
@@ -96,14 +96,14 @@
         <div class="row text center book margin-bottom">
             <div class="column_10 offset_1">
                 <h1 class="color theme">Download</h1>
-                <h3>Sounds cool? Checkout <span class="text normal color white">0.7.2 version</span>
+                <h3>Sounds cool? Checkout <span class="text normal color white">0.7.3 version</span>
                 </h3>
             </div>
         </div>
 
         <div class="row">
             <div class="offset_2 column_4">
-                <a href="https://github.com/soyjavi/package-tuktuk/archive/0.7.2.zip" class="button large anchor "><span class="icon download"></span>Download .Zip File</a>
+                <a href="https://github.com/soyjavi/package-tuktuk/archive/0.7.3.zip" class="button large anchor "><span class="icon download"></span>Download .Zip File</a>
             </div>
             <div class="column_4">
                 <a href="https://github.com/soyjavi/tuktuk" class="button large anchor secondary"><span class="icon github"></span>Source on Github</a>
