Change style in buttons

--- a/site/examples/blog.html
+++ b/site/examples/blog.html
@@ -27,7 +27,7 @@
     </style>
 </head>
 
-<body class="text thin">
+<body>
     <header class="bck light padding">
         <div class="row">
             <div class="column_6">
