--- a/site/examples/landing.html
+++ b/site/examples/landing.html
@@ -28,13 +28,13 @@
 
         section.landing button {
             border-radius: 0px 5px 5px 0px !important;}
-            
+
         .button.large, button.large {
             font-size: 1.3em;
         }
     </style>
 </head>
-<body class="text thin">
+<body>
     <!-- ========================== HEADER ========================== -->
     <header class="bck margin-top margin-bottom">
         <div class="row">
