--- a/site/examples/profile.html
+++ b/site/examples/profile.html
@@ -22,8 +22,7 @@
             left: 2px; }
     </style>
 </head>
-<body class="text thin">
-
+<body>
     <header class="bck dark padding color white">
         <div class="row">
             <div class="column_6">
