New method for set state "loading" to buttons

--- a/site/examples/landing.html
+++ b/site/examples/landing.html
@@ -23,15 +23,14 @@
 
         section.landing input {
             border-radius: 5px 0px 0px 5px !important;
-
-        }
+            height: 48px;}
 
         section.landing button {
-            border-radius: 0px 5px 5px 0px !important;}
+            border-radius: 0px 5px 5px 0px !important;
+            height: 48px;}
 
         .button.large, button.large {
-            font-size: 1.3em;
-        }
+            font-size: 1.3em;}
     </style>
 </head>
 <body>
