--- a/site/examples/blog.html
+++ b/site/examples/blog.html
@@ -5,7 +5,7 @@
     <title>TukTuk - Blog Template</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <link rel="stylesheet" href="../package/tuktuk.css">
-    <link rel="stylesheet" href="../package/tuktuk.theme.css">
+    <link rel="stylesheet" href="../package/tuktuk.theme.mock.css">
     <link rel="stylesheet" href="../package/tuktuk.icons.css">
     <style>
         body > header .logo {
