--- a/site/examples/landing.html
+++ b/site/examples/landing.html
@@ -6,7 +6,7 @@
     <!-- Mobile Specific Metas -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <link rel="stylesheet" href="../package/tuktuk.css">
-    <link rel="stylesheet" href="../package/tuktuk.theme.css">
+    <link rel="stylesheet" href="../package/tuktuk.theme.mock.css">
     <!-- TUKTUK.WIDGETS -->
     <link rel="stylesheet" href="../package/tuktuk.icons.css">
     <style>
