--- a/site/examples/app.html
+++ b/site/examples/app.html
@@ -34,13 +34,13 @@
 </head>
 <body data-tuktuk="boxes">
     <aside id="menu" class="absolute bck light column_3">
-        <header class="bck theme">
+        <header class="bck dark">
             <div class="session on-left">
                 <strong>logged in as <a href="#" class="color default">soyjavi</a></strong>
             </div>
             <a href="#" data-box="close" class="on-right text big icon remove color white"></a>
         </header>
-        <article class="scroll">
+        <article class="bck light scroll">
             <img src="http://cdn.tapquo.com/photos/javi_color.jpg" class="responsive padding-left padding-top padding-right"/>
 
             <div class="margin-left margin-right">
@@ -51,8 +51,8 @@
 
             <hr/>
             <div class="margin" data-tuktuk="buttons">
-                <button data-tuktuk-modal="modal" data-tip="Click to view a modal window">Modal</button>
-                <button data-tuktuk-modal="modal-right" data-tip="Click to view a side window" class="secondary">Aside Right</button>
+                <button data-tuktuk-modal="modal" class="theme" data-tip="Click to view a modal window">Modal</button>
+                <button data-tuktuk-modal="modal-right" data-tip="Click to view a side window" class="">Aside Right</button>
             </div>
             <hr>
             <ul class="margin" data-tuktuk="totals">
@@ -74,12 +74,12 @@
         </article>
     </aside>
 
-    <aside class="bck dark column_3">
-        <header class="text center bck color">
+    <aside class="column_3">
+        <header class="bck theme text center ">
             <img src="../images/logo-white.png" class="logo on-left"/>
             <a href="#" class="on-right text big icon cog" data-tuktuk-box="menu"></a>
         </header>
-        <article class="scroll">
+        <article class="bck dark scroll">
             <img src="http://cdn.tapquo.com/photos/javi_color.jpg" class="responsive padding-left padding-top padding-right"/>
 
             <div class="margin-left margin-right">
@@ -90,8 +90,8 @@
 
             <hr/>
             <div class="margin" data-tuktuk="buttons">
-                <button data-tuktuk-modal="modal" data-tip="Click to view a modal window">Modal</button>
-                <button data-tuktuk-modal="modal-right" data-tip="Click to view a side window" class="secondary">Aside Right</button>
+                <button data-tuktuk-modal="modal" class="theme" data-tip="Click to view a modal window">Modal</button>
+                <button data-tuktuk-modal="modal-right" data-tip="Click to view a side window" class="">Aside Right</button>
             </div>
             <hr>
             <ul class="margin" data-tuktuk="totals">
@@ -111,27 +111,27 @@
                 <a href="#"><span class="icon star"></span>Debuts<small>(160)</small></a>
             </nav>
         </article>
-        <footer class="bck darkest text center">
+        <footer class="bck dark text center">
             Handcrafted by <a href="http://tapquo.com" class="display inline"><img src="http://cdn.tapquo.com/images/logo_footer.png"/></a>
         </footer>
     </aside>
 
 
     <section>
-        <header class="bck light">
+        <header>
             <h3 class="on-left text thin">Web Application <span class="tag bck theme">NEW!</span></h3>
             <nav class="on-right">
-                <button class="tiny secondary">tiny</button>
-                <button class="small secondary">small</button>
-                <button>normal</button>
+                <button class="tiny">tiny</button>
+                <button class="small success">small</button>
+                <button class="alert">normal</button>
             </nav>
         </header>
         <article class="padding scroll">
             <div class="margin-bottom">
                 <h4 class="text book inline"><span class="icon star color theme "></span> Featured</h4>
                 <nav class="inline on-right">
-                    <a href="#" class="button secondary small"><span class="icon search"></span>Search</a>
-                    <a href="#" class="button small"><span class="icon envelope"></span>Send</a>
+                    <a href="#" class="button small"><span class="icon search"></span>Search</a>
+                    <a href="#" class="button theme small"><span class="icon envelope"></span>Send</a>
                 </nav>
             </div>
             <div class="inline">
@@ -142,7 +142,7 @@
             <div class="margin-bottom">
                 <h4 class="text book inline"><span class="icon group color theme"></span> Friends</h4>
                 <nav class="inline on-right">
-                    <a href="#" class="button secondary small"><span class="icon search"></span>Search</a>
+                    <a href="#" class="button  small"><span class="icon search"></span>Search</a>
                 </nav>
             </div>
             <div class="inline">
@@ -169,9 +169,9 @@
             </nav>
 
             <nav class="on-right">
-                <button class="tiny secondary">tiny</button>
-                <button class="small secondary">small</button>
-                <button class="secondary">normal</button>
+                <button class="tiny">tiny</button>
+                <button class="small success">small</button>
+                <button class="alert">normal</button>
             </nav>
         </footer>
     </section>
