--- a/site/examples/landing.html
+++ b/site/examples/landing.html
@@ -22,11 +22,11 @@
             left: 2px; }
 
         section.landing input {
-            border-radius: 5px 0px 0px 5px !important;
+            border-radius: 1px 0px 0px 1px !important;
             height: 48px;}
 
         section.landing button {
-            border-radius: 0px 5px 5px 0px !important;
+            border-radius: 0px 1px 1px 0px !important;
             height: 48px;}
 
         .button.large, button.large {
@@ -38,7 +38,7 @@
     <header class="bck margin-top margin-bottom">
         <div class="row">
             <div class="column_6">
-                <img src="../images/logo-color.png" class="logo on-left"/>
+                <img src="../images/logo-green.png" class="logo on-left"/>
                 <h2 class="text italic thin">Landing Template</h2>
             </div>
             <nav class="column_6 text right">
@@ -48,7 +48,7 @@
         </div>
     </header>
 
-    <section class="bck darkest landing text center color white">
+    <section class="bck theme landing text center">
         <div class="row">
             <div class="column_10 offset_1">
                 <h1><strong>tuk</strong>tuk</h1>
@@ -64,7 +64,7 @@
         <h5 class="text book">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h5>
     </section>
 
-    <section class="bck theme padding text center ">
+    <section class="bck dark padding text center ">
         <div class="row padding-bottom">
             <div class="column_10 offset_1">
                 <h1 class="text book color default">Lorem ipsum dolor sit amet</h1>
@@ -109,7 +109,7 @@
         </div>
     </section>
 
-    <section class="bck lightest landing">
+    <section class="landing">
         <div class="row text center">
             <div class="column_10 offset_1">
                 <h2 class="text bold color theme">Lorem ipsum dolor sit amet</h2>
@@ -119,7 +119,7 @@
         </div>
     </section>
 
-    <section class="padding bck color">
+    <section class="padding bck light">
         <div class="row margin-bottom">
             <div class="column_10 offset_1 text center">
                 <h1 class="color book theme">Author</h1>
