--- a/site/examples/profile.html
+++ b/site/examples/profile.html
@@ -23,10 +23,10 @@
     </style>
 </head>
 <body>
-    <header class="bck dark padding color white">
+    <header class="padding">
         <div class="row">
             <div class="column_6">
-                <img src="../images/logo-white.png" class="logo on-left"/>
+                <img src="../images/logo-green.png" class="logo on-left"/>
                 <h2 class="text italic thin">Profile Template</h2>
             </div>
             <nav class="column_6  text right bold">
@@ -36,7 +36,7 @@
         </div>
     </header>
 
-    <section class="padding bck color">
+    <section class="padding bck dark">
         <div class="row ">
             <div class="column_3 padding" >
                 <img src="http://cdn.tapquo.com/photos/javi_color.jpg" class=" responsive rounded" data-tip="Hello world!" />
@@ -63,7 +63,7 @@
         </div>
     </section>
 
-    <section class="bck dark">
+    <section class="bck light">
         <div class="row text center">
             <nav data-tuktuk="menu" class="column_12 padding text bold">
                 <a href="#" class="active"><span class="icon user"></span>Shots<small>(100)</small></a>
