--- a/site/index.html
+++ b/site/index.html
@@ -48,7 +48,7 @@
                 <a href="http://tapquo.com" class="tapquo"><img src="http://cdn.tapquo.com/images/tapquo_circle.png"></a>
             </div>
             <h5 class="column_4 text right hide-phone">
-                <a href="https://github.com/soyjavi/package-tuktuk/archive/0.7.5.zip" class="icon download margin-right"></a>
+                <a href="https://github.com/soyjavi/package-tuktuk/archive/0.8.zip" class="icon download margin-right"></a>
                 <a href="https://github.com/soyjavi/tuktuk" class="icon github margin-right"></a>
                 <a href="https://twitter.com/soyjavi" target="_blank" class="icon twitter"></a>
             </h5>
@@ -96,23 +96,23 @@
         <div class="row text center book margin-bottom">
             <div class="column_10 offset_1">
                 <h1 class="color theme">Download</h1>
-                <h3>Sounds cool? Checkout <span class="text normal color white">0.7.5 version</span>
+                <h3>Sounds cool? Checkout <span class="text normal color white">0.8 version</span>
                 </h3>
             </div>
         </div>
 
         <div class="row">
             <div class="offset_2 column_4">
-                <a href="https://github.com/soyjavi/package-tuktuk/archive/0.7.5.zip" class="button large anchor "><span class="icon download"></span>Download .Zip File</a>
+                <a href="https://github.com/soyjavi/package-tuktuk/archive/0.8.zip" class="button large anchor theme"><span class="icon download"></span>Download .Zip File</a>
             </div>
             <div class="column_4">
-                <a href="https://github.com/soyjavi/tuktuk" class="button large anchor secondary"><span class="icon github"></span>Source on Github</a>
+                <a href="https://github.com/soyjavi/tuktuk" class="button large anchor theme"><span class="icon github"></span>Source on Github</a>
             </div>
         </div>
     </section>
 
     <!-- ========================== EXAMPLES ========================== -->
-    <section class="padding bck color text center">
+    <section class="padding bck light text center">
         <div class="row text book margin-bottom">
             <div class="column_10 offset_1">
                 <h1 class="color theme">Examples</h1>
@@ -150,7 +150,7 @@
     </section>
 
     <!-- ========================== COLUMNS ========================== -->
-    <section class="padding bck lightest text center">
+    <section class="padding text center">
         <div class="row text book">
             <div class="column_10 offset_1 margin-bottom">
                 <h1 class="color theme">Turn it up to 12 columns</h1>
@@ -200,14 +200,14 @@
         </div>
 
         <div class="row margin-bottom">
-            <div class="column_4 offset_4 radius bck color text color white padding-top padding-bottom">4 with 4 offset</div>
+            <div class="column_4 offset_4 radius bck theme text color white padding-top padding-bottom">4 with 4 offset</div>
         </div>
         <div class="row margin-bottom">
-            <div class="column_3 offset_3 radius bck color text color white padding-top padding-bottom">3 with 3 offset</div>
-            <div class="column_3 offset_3 radius bck color text color white padding-top padding-bottom">3 with 3 offset</div>
+            <div class="column_3 offset_3 radius bck theme text color white padding-top padding-bottom">3 with 3 offset</div>
+            <div class="column_3 offset_3 radius bck theme text color white padding-top padding-bottom">3 with 3 offset</div>
         </div>
         <div class="row">
-            <div class="column_8 offset_4 radius bck color text color white padding-top padding-bottom">8 with 4 offset</div>
+            <div class="column_8 offset_4 radius bck theme text color white padding-top padding-bottom">8 with 4 offset</div>
         </div>
     </section>
 
@@ -276,27 +276,27 @@
                     <h3>Gallery of styles and sizes that will be enough to interact with your site.</h3>
                     <div class="margin-top">
                         <a href="#" class="button large">Large</a>
-                        <a href="#" class="button secondary">Normal</a>
+                        <a href="#" class="button theme">Normal</a>
                         <a href="#" class="button success small">Small</a>
                         <a href="#" class="button alert tiny">Tiny</a>
                     </div>
 
                     <div class="margin-top">
                         <a href="#" class="button large"><span class="icon ok"></span>Large</a>
-                        <a href="#" class="button secondary"><span class="icon ok"></span>Normal</a>
+                        <a href="#" class="button theme"><span class="icon ok"></span>Normal</a>
                         <a href="#" class="button success small"><span class="icon ok"></span>Small</a>
                         <a href="#" class="button alert tiny"><span class="icon ok"></span>Tiny</a>
                     </div>
 
                     <div class="margin-top">
                         <a href="#" class="button large icon ok"></a>
-                        <a href="#" class="button secondary icon ok"></a>
+                        <a href="#" class="button theme icon ok"></a>
                         <a href="#" class="button success small icon ok"></a>
                         <a href="#" class="button alert tiny icon ok"></a>
                     </div>
 
                     <div class="margin-top">
-                        <a href="#" class="button anchor secondary"><span class="icon ok"></span>Anchor</a>
+                        <a href="#" class="button anchor theme"><span class="icon ok"></span>Anchor</a>
                     </div>
                 </div>
             </div>
@@ -542,16 +542,6 @@
             </nav>
         </div>
     </section>
-    <section class="bck color">
-        <div class="row text center">
-            <nav data-tuktuk="menu" class="column_12 padding text bold">
-                <a href="#" ><span class="icon camera"></span>Shots<small>(100)</small></a>
-                <a href="#" class="active"><span class="icon heart"></span>Likes<small>(3)</small></a>
-                <a href="#"><span class="icon group"></span>Following<small>(192)</small></a>
-                <a href="#"><span class="icon star"></span>Debuts<small>(160)</small></a>
-            </nav>
-        </div>
-    </section>
     <section class="bck light">
         <div class="row text center">
             <nav data-tuktuk="menu" class="column_12 padding text bold">
@@ -559,6 +549,16 @@
                 <a href="#"><span class="icon heart"></span>Likes<small>(3)</small></a>
                 <a href="#" class="active"><span class="icon group"></span>Following<small>(192)</small></a>
                 <a href="#"><span class="icon star"></span>Debuts<small>(160)</small></a>
+            </nav>
+        </div>
+    </section>
+    <section class="bck theme">
+        <div class="row text center">
+            <nav data-tuktuk="menu" class="column_12 padding text bold">
+                <a href="#" ><span class="icon camera"></span>Shots<small>(100)</small></a>
+                <a href="#"><span class="icon heart"></span>Likes<small>(3)</small></a>
+                <a href="#"><span class="icon group"></span>Following<small>(192)</small></a>
+                <a href="#" class="active"><span class="icon star"></span>Debuts<small>(160)</small></a>
             </nav>
         </div>
     </section>
@@ -855,7 +855,7 @@
 
 
     <!-- ========================== AUTHOR ========================== -->
-    <section class="padding bck color">
+    <section class="padding bck theme">
         <div class="row margin-bottom">
             <div class="column_10 offset_1 text center book">
                 <h1 class="color theme">Author</h1>
@@ -914,7 +914,7 @@
         </header>
         <article class="text big">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus nihil aut sit incidunt amet modi dolores a sed.</article>
         <footer>
-            <button data-modal="close" class="button large secondary"><span class="icon ok"></span>Accept</button>
+            <button data-modal="close" class="button large theme"><span class="icon ok"></span>Accept</button>
             <button data-modal="close" class="button  alert"><span class="icon remove"></span>Cancel</button>
         </footer>
     </div>
